# lambda-calculus-cpp

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  meta.hpp
tests/: CMakeLists.txt  MetaTests.cpp
